# VLN-Model-on-Walter

./: README.md  Readme  environment.yml  environmentOWL.yml  environmentYOLOE.yml  environment_310.yml
camera_pkg/: CMakeLists.txt  package.xml
camera_pkg/camera/: camera_publisher.py  camera_suscriber.py
camera_pkg/launch/: camera.launch.py  model.launch.py
camera_pkg/rviz/: camera_rgbd.rviz
micro-ros/: GOSPEED_WALTER.ino
walter_scripts/: package.xml  setup.cfg  setup.py
walter_scripts/clip/: model_explainability.py
walter_scripts/exploration/: utils.py
walter_scripts/localization/: clip_owl.py
walter_scripts/walter_scripts/agents/: agent_fbe.py
walter_scripts/walter_scripts/exploration/: frontier_based_exploration.py  utils.py
walter_scripts/walter_scripts/shared/: utils.py
walter_scripts1/agents/: agent_fbe.py
walter_vln_model/: CMakeLists.txt  package.xml
walter_vln_model/nodes/: AgentFbRosNode.py  owlvit_node.py  yolo_world.py  yoloe_node.py
